2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgroupio.c: Avoid assignments in comparisons.
	* lib/sgroupio.c: Add brackets.
	* lib/sgroupio.c: Avoid implicit conversion of pointers / integers
	to booleans.
	* lib/sgroupio.c: The changed, isopen, locked, and readonly fields
	of the db are booleans.
	* lib/sgroupio.h, lib/sgroupio.c: sgr_file_present returns a bool.
	* lib/sgroupio.h: Add protection against multiple inclusions.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow.c: nis_used and nis_bound are booleans.
	* lib/gshadow.c: Avoid implicit conversion of pointers / integers
	to booleans.
	* lib/gshadow.c: Avoid assignments in comparisons.
	* lib/gshadow.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/groupio.c: The changed, isopen, locked, and readonly fields
	of the db are booleans.
	* lib/groupio.h: Add protection against multiple inclusion.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/sgetgrent.c: Avoid implicit conversion of pointers / chars
	to booleans.
	* lib/sgetgrent.c: Avoid assignments in comparisons.
	* lib/sgetgrent.c: Add brackets.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/encrypt.c: Avoid implicit conversion of pointers to
	booleans.
	* lib/encrypt.c: Add parenthesis.

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/port.c: Avoid implicit conversion of pointers / integers /
	chars to booleans.
	* lib/port.c: Avoid multiple statement on the same line.
	* lib/port.c: Add brackets and parenthesis.
	* lib/port.c: Avoid assignments in comparisons.
	* lib/port.c: Fix typo comparision -> comparison (in comment).

2008-05-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/fputsx.c: Add brackets.
	* lib/fputsx.c: Avoid assignments in comparisons.
	* lib/fputsx.c: Avoid implicit conversion of pointers / integers /
	chars to booleans.
