@@ -30,8 +30,14 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+/* $Id$ */
+#ifndef _SHADOWIO_H
+#define _SHADOWIO_H
+
+#include "defines.h"
+
 extern int spw_close (void);
-extern int spw_file_present (void);
+extern bool spw_file_present (void);
 extern const struct spwd *spw_locate (const char *);
 extern int spw_lock (void);
 extern int spw_name (const char *);
@@ -43,3 +49,4 @@ extern int spw_unlock (void);
 extern int spw_update (const struct spwd *);
 extern int spw_sort (void);
 
+#endif
